# Know-Your-Computer

./: .gitignore  CMakeLists.txt  main.cpp
include/system/: component-reader.h  gpu-reader.h  proc-reader.h
include/system/CPU/: proc-reader.h
include/system/GPU/: gpu-reader.h
src/: main.cpp
src/system/: gpu-reader.cpp
src/system/CPU/: proc-reader.cpp
src/system/GPU/: gpu-reader.cpp
